--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,15 @@ ol{
   border-radius: 5%;
 }
 
+.content img{
+  width: 50%;
+  margin: auto;
+}
+
+.content ul{
+  background-color: white;
+  border-radius: 5%;
+}
 
 .mm-title{
   display: none;
